Corrects buttons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -948,7 +948,8 @@ body {
   height: 240px; }
   .tab__buttons {
     display: flex;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    align-items: center; }
     .tab__buttons .btn:first-child {
       margin-right: 10px; }
 
