--- a/scss/components/_multistep-form.scss
+++ b/scss/components/_multistep-form.scss
@@ -4,6 +4,7 @@
     &__buttons {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         .btn:first-child {
             margin-right: 10px;
         }
